test/mutation_analysis/s0925_long_pressed_name/hafis/starchat/mutants/46/result.txt
./test/mutation_analysis/s0925_long_pressed_name/hafis/starchat/mutants/46/Solution.java:40: error: unreachable statement
        for (; false; j++) {
                           ^
1 error
